--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="6.0" xmlns="https://jakarta.ee/xml/ns/jakartaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_6_0.xsd">
-
     <!-- Patient Controllers -->
     <servlet>
         <servlet-name>PatientBookAppointmentServlet</servlet-name>
@@ -26,7 +25,6 @@
         <servlet-name>PatientExaminationPackageSelectServlet</servlet-name>
         <servlet-class>controller.patient.PatientExaminationPackageSelectServlet</servlet-class>
     </servlet>
-
     <!-- Staff Controllers -->
     <servlet>
         <servlet-name>queueRecordController</servlet-name>
@@ -40,7 +38,6 @@
         <servlet-name>PatientListServlet</servlet-name>
         <servlet-class>controller.staff.PatientListServlet</servlet-class>
     </servlet>
-
     <!-- Manager Controllers -->
     <servlet>
         <servlet-name>ExaminationPackageManager</servlet-name>
@@ -62,7 +59,6 @@
         <servlet-name>InsertDoctorAssignmentServlet</servlet-name>
         <servlet-class>controller.manager.InsertDoctorAssignmentServlet</servlet-class>
     </servlet>
-
     <!-- Doctor Controllers -->
     <servlet>
         <servlet-name>QueueManager</servlet-name>
@@ -96,8 +92,10 @@
         <servlet-name>ManagerAnalyticServlet</servlet-name>
         <servlet-class>controller.manager.ManagerAnalyticServlet</servlet-class>
     </servlet>
-    <!-- Servlet Mappings -->
-   
+    <servlet>
+        <servlet-name>HomePageServlet</servlet-name>
+        <servlet-class>controller.HomePageServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>PatientBookAppointmentServlet</servlet-name>
         <url-pattern>/PatientBookAppointmentServlet</url-pattern>
@@ -169,5 +167,9 @@
     <servlet-mapping>
         <servlet-name>RemoveUnavailabilityServlet</servlet-name>
         <url-pattern>/RemoveUnavailabilityServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>HomePageServlet</servlet-name>
+        <url-pattern>/homePage</url-pattern>
     </servlet-mapping>
 </web-app>
