--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -56,6 +56,18 @@
         <servlet-name>ReceptionAppointmentsListServlet</servlet-name>
         <servlet-class>controller.staff.ReceptionAppointmentsListServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>InvoiceServlet</servlet-name>
+        <servlet-class>controller.user.InvoiceServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>PatientInvoiceServlet</servlet-name>
+        <servlet-class>controllers.patient.PatientInvoiceServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>InvoiceDetailsServlet</servlet-name>
+        <servlet-class>controller.patient.InvoiceDetailsServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>PatientBookAppointmentServlet</servlet-name>
         <url-pattern>/PatientBookAppointmentServlet</url-pattern>
@@ -127,5 +139,33 @@
     <servlet-mapping>
         <servlet-name>ReceptionAppointmentsListServlet</servlet-name>
         <url-pattern>/ReceptionAppointmentsListServlet</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>PaymentBookingServlet</servlet-name>
+        <servlet-class>controller.patient.PaymentBookingServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>PaymentBookingServlet</servlet-name>
+        <url-pattern>/payment</url-pattern>
+    </servlet-mapping>
+    <servlet>
+        <servlet-name>VnpayReturnBooking</servlet-name>
+        <servlet-class>controller.patient.VnpayReturnBooking</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>VnpayReturnBooking</servlet-name>
+        <url-pattern>/vnpayReturn</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>InvoiceServlet</servlet-name>
+        <url-pattern>/InvoiceServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PatientInvoiceServlet</servlet-name>
+        <url-pattern>/PatientInvoiceServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>InvoiceDetailsServlet</servlet-name>
+        <url-pattern>/InvoiceDetailsServlet</url-pattern>
     </servlet-mapping>
 </web-app>
