--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -311,6 +311,10 @@
         <servlet-name>TransferPatient</servlet-name>
         <url-pattern>/TransferPatient</url-pattern>
     </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>InvoiceDetailsServlet</servlet-name>
+        <url-pattern>/InvoiceDetailsServlet</url-pattern>
+    </servlet-mapping>
     <welcome-file-list>
         <welcome-file>home.jsp</welcome-file>
     </welcome-file-list>
