--- a/SWP_BL5_TEAM1/nbproject/project.properties
+++ b/SWP_BL5_TEAM1/nbproject/project.properties
@@ -53,12 +53,15 @@ file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar=..\\lib_jar\\jakarta.servlet.j
 file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar=..\\lib_jar\\jakarta.servlet.jsp.jstl-api-2.0.0.jar
 file.reference.javase-3.5.3.jar=..\\lib_jar\\javase-3.5.3.jar
 file.reference.javax.activation-1.2.0.jar=..\\lib_jar\\javax.activation-1.2.0.jar
+file.reference.javax.mail-1.6.2.jar=..\\lib_jar\\javax.mail-1.6.2.jar
+file.reference.javax.mail-api-1.6.2.jar=..\\lib_jar\\javax.mail-api-1.6.2.jar
 file.reference.javax.mail.jar=..\\lib_jar\\javax.mail.jar
 file.reference.javax.servlet-api-3.0.1.jar=..\\lib_jar\\javax.servlet-api-3.0.1.jar
 file.reference.jaxb-api-2.1.jar=..\\lib_jar\\jaxb-api-2.1.jar
 file.reference.jaxb-api-2.3.1.jar=..\\lib_jar\\jaxb-api-2.3.1.jar
 file.reference.jaxb-runtime-2.3.1.jar=..\\lib_jar\\jaxb-runtime-2.3.1.jar
 file.reference.json-20210307.jar=..\\lib_jar\\json-20210307.jar
+file.reference.mail.jar=..\\lib_jar\\mail.jar
 file.reference.mysql-connector-j-9.3.0.jar=..\\lib_jar\\mysql-connector-j-9.3.0.jar
 file.reference.mysql-connector-java-8.0.17.jar=..\\lib_jar\\mysql-connector-java-8.0.17.jar
 file.reference.poi-3.15.jar=..\\lib_jar\\poi-3.15.jar
@@ -101,24 +104,27 @@ javac.classpath=\
     ${file.reference.jackson-databind-2.18.3.jar}:\
     ${file.reference.jackson-databind-2.19.0-rc2.jar}:\
     ${file.reference.jakarta.jakartaee-api-8.0.0.jar}:\
+    ${file.reference.jakarta.mail-1.6.7.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-2.0.0.jar}:\
     ${file.reference.jakarta.servlet.jsp.jstl-api-2.0.0.jar}:\
     ${file.reference.javase-3.5.3.jar}:\
     ${file.reference.javax.activation-1.2.0.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.javax.mail-api-1.6.2.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.javax.servlet-api-3.0.1.jar}:\
     ${file.reference.jaxb-api-2.1.jar}:\
     ${file.reference.jaxb-api-2.3.1.jar}:\
     ${file.reference.jaxb-runtime-2.3.1.jar}:\
     ${file.reference.json-20210307.jar}:\
+    ${file.reference.mail.jar}:\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
     ${file.reference.mysql-connector-java-8.0.17.jar}:\
     ${file.reference.poi-3.15.jar}:\
     ${file.reference.poi-ooxml-3.16.jar}:\
     ${file.reference.poi-ooxml-schemas-3.16.jar}:\
     ${file.reference.smtp-1.6.2.jar}:\
-    ${file.reference.xmlbeans-2.3.0.jar}:\
-    ${file.reference.jakarta.mail-1.6.7.jar}
+    ${file.reference.xmlbeans-2.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
