--- a/SWP_BL5_TEAM1/web/WEB-INF/web.xml
+++ b/SWP_BL5_TEAM1/web/WEB-INF/web.xml
@@ -169,6 +169,10 @@
         <servlet-name>ServiceManager</servlet-name>
         <servlet-class>controller.manager.ExaminationPackageManager</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>PatientQueueViewer</servlet-name>
+        <servlet-class>controller.patient.PatientQueueViewer</servlet-class>
+    </servlet>
     
     
 
@@ -340,6 +344,10 @@
     <servlet-mapping>
         <servlet-name>ServiceManager</servlet-name>
         <url-pattern>/ServiceManager</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>PatientQueueViewer</servlet-name>
+        <url-pattern>/PatientQueueViewer</url-pattern>
     </servlet-mapping>
     <welcome-file-list>
         <welcome-file>home.jsp</welcome-file>
