--- a/SWP_BL5_TEAM1/nbproject/private/private.properties
+++ b/SWP_BL5_TEAM1/nbproject/private/private.properties
@@ -1,5 +1,5 @@
-deploy.ant.properties.file=C:\\Users\\JackGarland\\AppData\\Roaming\\NetBeans\\25\\tomcat101.properties
-j2ee.server.home=C:/Program Files/Apache Software Foundation/apache-tomcat-10.1.40
-j2ee.server.instance=tomcat101:home=C:\\Program Files\\Apache Software Foundation\\apache-tomcat-10.1.40
+deploy.ant.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\17\\tomcat101.properties
+j2ee.server.home=C:/Program Files (x86)/Apache Software Foundation/Tomcat 10.1
+j2ee.server.instance=tomcat101:home=C:\\Program Files (x86)\\Apache Software Foundation\\Tomcat 10.1
 selected.browser=Chrome
-user.properties.file=C:\\Users\\JackGarland\\AppData\\Roaming\\NetBeans\\25\\build.properties
+user.properties.file=C:\\Users\\LENOVO\\AppData\\Roaming\\NetBeans\\17\\build.properties
